<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculadora"
        android:textSize="28dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Altura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/cuadroAltura"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintAltura"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/cms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.64"
            android:text="@string/cms"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/Peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso"
            android:textSize="22dp" />

        <EditText
            android:id="@+id/cuadroPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/hintPeso"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/kgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kgs"
            android:textSize="22dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonIMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="muestraIMC"
            android:text="@string/botonIMC"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/muestraMASA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.01"
            android:text="@string/temporal"
            android:textSize="22dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/muestraSalud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/salud"
        android:textSize="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/sexo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/sexo"
            android:textSize="22dp" />

        <RadioGroup
            android:id="@+id/seleccionSexo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.67"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/hombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hombre"
                android:textSize="22dp" />

            <RadioButton
                android:id="@+id/mujer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/mujer"
                android:textSize="22dp" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/insertaFecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nacimiento"
        android:textSize="22dp" />

    <DatePicker
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/botonIGMC "
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:onClick="muestraIGCE"
            android:text="@string/botonIGCE"
            android:textSize="22dp" />

        <TextView
            android:id="@+id/muestraIGMC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.29"
            android:text="@string/temporal2"
            android:textSize="22dp" />
    </LinearLayout>

</LinearLayout>